<resources>
    <string name="app_name">Egy Banks Test</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="welcome_to_our_app">Welcome To Our App</string>
    <string name="log_out">Log out</string>
    <string name="welcome_back_to_the_app">Welcome Back To The App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="status_email_empty">The Email Is Empty</string>
    <string name="status_password_empty">The Password Is Empty</string>
    <string name="status_confirm_password_empty">The Comfirm Password Input Is Empty</string>
    <string name="status_name_empty">The Name Is Empty</string>
    <string name="status_password_not_match">The Password Doesn\'t Match</string>
    <string name="status_not_email">Not a Correct Email</string>
    <string name="egypt_banks_test">EGYPT BANKS TEST</string>
    <string name="you_already_signed_in">You Are Already Logged In</string>
    <string name="welcome_guest">Welcome Guest!</string>
    <string name="about_me">About Me</string>
    <string name="experience">Experience</string>
    <string name="name_title">Name:</string>
    <string name="about_me_title">About Me: </string>
    <string name="experience_title">Experience: </string>
    <string name="edit">Edit</string>
    <string name="education">Education</string>
    <string name="education_title">Education:</string>
    <string name="skills">Skills</string>
    <string name="skills_title">Skills:</string>
    <string name="certifications">Certifications</string>
    <string name="certifications_title">Certifications:</string>
    <string name="courses_title">Courses:</string>
    <string name="courses">Courses</string>
    <string name="language">Language</string>
    <string name="language_title">Languages:</string>
    <string name="birth_date">Birth Date</string>
    <string name="birth_date_title">Birth Date:</string>
    <string name="nationality">Nationality</string>
    <string name="nationality_title">Nationality:</string>
    <string name="phone">Phone</string>
    <string name="phone_title">Phone:</string>
    <string name="mobile_title">Mobile:</string>
    <string name="mobile">Mobile</string>
    <string name="address_title">Address:</string>
    <string name="address">Address</string>
    <string name="more_info_title">More Information:</string>
    <string name="more_info">More Information</string>
    <string name="make_it_perfect">Make It Perfect</string>
    <string name="update_your_profile_and_details">Update Your Profile And Details</string>
    <string name="personal_title">Personal:</string>
    <string name="contact_title">Contact:</string>
    <string name="email_title">Email:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="your_result_is">Your Result is:</string>
    <string name="modify_your_profile_have_one">Hello, You can\'t modify your profile until you have one :)\n Click here to sign up </string>
    <string name="user_profile">User Profile</string>
    <string name="background_profile">Background_Profile</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="username">Username</string>
    <string name="quiz_icon">Quiz Icon</string>
    <string name="alahly_test_bank">Alahly Test Bank</string>
    <string name="alahly_test_desc">You Can Simulate Al ahly Bank Test Here</string>
    <string name="banquemisr_test_bank">BanqueMisr Test Bank</string>
    <string name="banquemisr_test_desc">You Can Simulate Banquemisr Bank Test Here</string>
    <string name="my_profille">My Profile</string>
    <string name="profile_desc">You Can Add And Modify Your Resume Here</string>
    <string name="iq_test">IQ Test</string>
    <string name="iq_desc">Simulation of IQ Test</string>
    <string name="english_desc">Simulation of English Test</string>
    <string name="engish_test">English Test</string>
    <string name="technical_test">Technical Test</string>
    <string name="technicat_desc">Simulation of Technical Test</string>
    <string name="need_credintial">Error: Please Type the Correct Credential</string>
    <string name="update_completed">Update Completed</string>
    <string name="try_later">Error: Please Try Again Later</string>


</resources>
