<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/light_text_color"
            android:src="@drawable/default_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/pesonal_title_linear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/profile_image"
            app:layout_constraintTop_toBottomOf="@+id/profile_image">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/personal_title"
                android:textColor="@color/light_text_color"
                android:textSize="16sp"
                android:textStyle="bold" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/pesonal_title_linear"
                    app:layout_constraintTop_toBottomOf="@+id/pesonal_title_linear">

                    <TextView
                        android:id="@+id/name_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="125dp"
                        android:text=""
                        android:textColor="@color/light_text_color_gray"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/name"
                        android:textColor="@color/light_text_color_gray"
                        android:textSize="14sp"
                        android:textStyle="bold" />



                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="bottom"
                    android:background="@color/line" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/pesonal_title_linear"
                    app:layout_constraintTop_toBottomOf="@+id/pesonal_title_linear">

                    <TextView
                        android:id="@+id/birth_date_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="125dp"
                        android:text=""
                        android:textColor="@color/light_text_color_gray"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/birth_date"
                        android:textColor="@color/light_text_color_gray"
                        android:textSize="14sp"
                        android:textStyle="bold" />



                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="bottom"
                    android:background="@color/line" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/pesonal_title_linear"
                    app:layout_constraintTop_toBottomOf="@+id/pesonal_title_linear">

                    <TextView
                        android:id="@+id/nationality_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="125dp"
                        android:text=""
                        android:textColor="@color/light_text_color_gray"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/nationality"
                        android:textColor="@color/light_text_color_gray"
                        android:textSize="14sp"
                        android:textStyle="bold" />



                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="bottom"
                    android:background="@color/line" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/pesonal_title_linear"
                    app:layout_constraintTop_toBottomOf="@+id/pesonal_title_linear">

                    <TextView
                        android:id="@+id/languages_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="125dp"
                        android:text=""
                        android:textColor="@color/light_text_color_gray"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/language"
                        android:textColor="@color/light_text_color_gray"
                        android:textSize="14sp"
                        android:textStyle="bold" />



                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="bottom"
                    android:background="@color/line" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="40dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/contact_title"
                android:textColor="@color/light_text_color"
                android:textSize="16sp"
                android:textStyle="bold" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/pesonal_title_linear"
                    app:layout_constraintTop_toBottomOf="@+id/pesonal_title_linear">

                    <TextView
                        android:id="@+id/phone_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="125dp"
                        android:text=""
                        android:textColor="@color/light_text_color_gray"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/phone"
                        android:textColor="@color/light_text_color_gray"
                        android:textSize="14sp"
                        android:textStyle="bold" />



                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="bottom"
                    android:background="@color/line" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/pesonal_title_linear"
                    app:layout_constraintTop_toBottomOf="@+id/pesonal_title_linear">

                    <TextView
                        android:id="@+id/mobile_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="125dp"
                        android:text=""
                        android:textColor="@color/light_text_color_gray"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/mobile"
                        android:textColor="@color/light_text_color_gray"
                        android:textSize="14sp"
                        android:textStyle="bold" />



                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="bottom"
                    android:background="@color/line" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/pesonal_title_linear"
                    app:layout_constraintTop_toBottomOf="@+id/pesonal_title_linear">

                    <TextView
                        android:id="@+id/email_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="125dp"
                        android:text=""
                        android:textColor="@color/light_text_color_gray"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/email"
                        android:textColor="@color/light_text_color_gray"
                        android:textSize="14sp"
                        android:textStyle="bold" />



                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="bottom"
                    android:background="@color/line" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/pesonal_title_linear"
                    app:layout_constraintTop_toBottomOf="@+id/pesonal_title_linear">

                    <TextView
                        android:id="@+id/address_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="125dp"
                        android:text=""
                        android:textColor="@color/light_text_color_gray"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/address"
                        android:textColor="@color/light_text_color_gray"
                        android:textSize="14sp"
                        android:textStyle="bold" />



                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="bottom"
                    android:background="@color/line" />

            </LinearLayout>



        </LinearLayout>




    </android.support.constraint.ConstraintLayout>

</ScrollView>